          request.emit_http_headers(more_headers=[])
      This call pre-processes the headers list (encoding from unicode, making
      sure that there is exactly ONE content-type header, etc.) and then
      calls a server specific helper _emit_http_headers to emit it.
      CGI works
      CLI ?
      STANDALONE ?
      MODPY ?
      WSGI ?
      FCGI ?
      TWISTED ?

  New Features:
    * Removed "underscore in URL" == "blank in pagename magic" - it made more
      trouble than it was worth. If you still want to have a _ in URL, just
      put a _ into pagename.
    * Introduced quoting for pagenames and new, easier link markup:
      * ["Page with blanks" but different link text],
        NOTE: using [:Page with blanks:but different link text] is DEPRECATED.
      * ["/Sub Page" with different link text]
      * MoinMoin:"Page with blanks"
      * [wiki:MoinMoin:"Page with blanks" different link text]
      * attachment:"blanks are evil.txt"

    * FeatureRequests/WikiEmailIntegration TODO:make some help page when stable
    * HTML parser (called "html") that allows you to use HTML on the page.
      Thanks to the trac team for the nice code.
    * You can have a common cache_dir for your farm (will save a bit space
      and cpu time as it shares some stuff).
      You need to set "cache_dir = '/some/farm/cachedir' in your farmconfig.
    * Added XMLRPC methods for attachment handling. Thanks to Matthew Gilbert.
    * Added TLS/SSL support to the standalone server. Thanks to Matthew Gilbert.
      To use TLS/SSL support you must also install the TLSLite library
      (http://trevp.net/tlslite/). Version 0.3.8 was used for development and
      testing.
    * cfg.log_reverse_dns_lookups [default: True] - you can set this to False
      if rev. dns lookups are broken in your network (leading to long delays
      on page saves). With False, edit-log will only contain IP, not hostname.